Use GetResourceByFindIndex to find resources

--- a/ui/index.html
+++ b/ui/index.html
@@ -2,20 +2,15 @@
 	<head>
 		<title>Credits</title>
 		<link rel="stylesheet" href="style.css">
+		<script src="https://kit.fontawesome.com/5537a772c3.js" crossorigin="anonymous"></script>
 		<script src="script.js"></script>
 	</head>
 	<body>
 		<div id="credits" style="display: none;">
-			<div id="credits-title">Credits</div>
-			<div id="credits-list">
-				<div id="credits-list-header">
-					<div>Resource</div>
-					<div>Description</div>
-					<div>Version</div>
-					<div>Author</div>
-				</div>
-				<div id="credits-list-body"></div>
-			</div>
+			<div id="credits-title">Resource Credits</div>
+			<div id="notification" style="display: none;"></div>
+			<div id="credits-list"></div>
+			<button id="close">Close</button>
 		</div>
 	</body>
 </html>
